fdo#56511 Don't unduly delay Bridge termination

When terminate is called from the Reader or Writer thread, the final terminate
was delayed until disposal of the BridgeFactory, as an unfortunate consequence
of always trying to join on the Reader and Writer.  Instead, forgo the join in
such a case and rely on the underlying osl::Thread becoming detached after
calling termiante.

Change-Id: Ifba788c4d0d2e9b14b4f7f6b5f0f1380b712ce36
(cherry picked from commit f6245d5bcb18dff2721d5975cd84711559cefe65)
Reviewed-on: https://gerrit.libreoffice.org/7919
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>